@@ -1,4 +1,8 @@
-﻿drkns 05.02.2016 21:26:41 +0200 - build 4541
+﻿drkns 06.02.2016 04:01:40 +0200 - build 4542
+
+1. 0003169: исчезают панели при запуске внешнего редактора
+
+drkns 05.02.2016 21:26:41 +0200 - build 4541
 
 1. Уточнение 4525.
 
